fix: Remove scrollbars from textarea

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,7 @@ textarea {
   color: var(--color-primary);
   padding: 10px;
   border-color: var(--color-paragraph);
+  overflow:hidden;
 }
 
 textarea:focus {
